# fw-nrfconnect-nrf

./: .gitignore  .gitmodules
at_clientx/: CMakeLists.txt
at_clientx/inc/: dbgPrintCustom.h  sys_def.h
at_clientx/src/: main.c  test.c  uart_drv.c  uart_drv.h
samples/nrf9160/asset_tracker/src/orientation_detector/: orientation_detector.c
samples/nrf9160/at_client/src/: main.c
